# xmlcopyeditor

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  TODO  checkinstall.sh  config.guess  config.sub  configure  configure.ac  depcomp  install-sh  missing
debian/: changelog  control  copyright  rules  xmlcopyeditor.1  xmlcopyeditor.install  xmlcopyeditor.menu  xmlcopyeditor.xpm
debian/patches/: help.patch  lictext.patch  series  src-Makefile.in.patch
src/: .cproject  .project  Makefile.am  Makefile.in  aboutdialog.cpp  aboutdialog.h  associatedialog.cpp  associatedialog.h  binaryfile.cpp  binaryfile.h  casehandler.cpp  casehandler.h  catalogresolver.cpp  catalogresolver.h  commandpanel.cpp  commandpanel.h  contexthandler.cpp  contexthandler.h  custom.xpm  dtd2schema.cpp  dtd2schema.h  exportdialog.cpp  exportdialog.h  findreplacepanel.cpp  findreplacepanel.h  getword.cpp  getword.h  globalreplacedialog.cpp  globalreplacedialog.h  housestyle.cpp  housestyle.h  housestylereader.cpp  housestylereader.h  housestylewriter.cpp  housestylewriter.h  insertpanel.cpp  insertpanel.h  locationpanel.cpp  locationpanel.h  mp3album.cpp  (+93 more)
src/catalog/: catalog
src/copying/: bsd.txt  mit.txt
src/copying/Apache/: LICENSE-2.0
src/copying/Apache/LICENSE-2_files/: style.css
src/copying/Aspell/: license.txt
src/copying/Scintilla/: scintilla-lic.txt
src/copying/boost_shared_ptr/: copying.txt
src/copying/libxml2/: libxml2-lic.txt
src/copying/libxslt/: libxslt-lic.txt
src/copying/wxAUI/: copying.txt
src/copying/wxStEditor/: copying.txt
src/copying/wxStyledTextCtrl/: copying.txt
src/copying/ximian/: OpenOffice_icons-lic.txt
src/copying/xmlcopyeditor/: copying.txt
src/dtd/: NewsML_1.2.dtd  OUGenericFull.dtd  docbook.dtd  lzx.dtd  moodle_glossary.dtd  moodle_xml.dtd  rss2.dtd  xhtml-lat1.ent  xhtml-special.ent  xslt10.dtd
src/dtd/dita/: catalog-dita.txt  catalog-dita.xml  concept.dtd  ditabase.dtd  map.dtd  map.mod  meta_xml.mod.old  reference.dtd  task.dtd  topic.dtd  topic.mod
src/dtd/tei/p4/: catalog.tei  dummy.dtd  index.xml  teiana2.dtd  teiback2.dtd  teicatalog.xml  teicert2.dtd  teicore2.dtd  teicorp2.dtd  teidict2.dtd  teidram2.dtd  teifig2.dtd  teifron2.dtd  teifs2.dtd  teifsd2.dtd  teigen2.dtd  teihdr2.dtd  teilink2.dtd  teimix2.dtd  teind2.dtd  teinet2.dtd  teipl2.dtd  teipros2.dtd  teishd2.dtd  teispok2.dtd  teistr2.dtd  teitc2.dtd  teite2f.dtd  teite2n.dtd  teiterm2.dtd  teitran2.dtd  teitsd2.dtd  teivers2.dtd  teiwsd2.dtd
src/dtd/tei/p5/: tei_all.dtd
src/help/: Table_of_Contents.hhc  xmlcopyeditor.chm  xmlcopyeditor.hhp
src/help/html/: appendix.html  association.html  attribute_hiding.html  completion.html  creating_filters.html  creating_rulesets.html  default_rulesets.html  editor.html  features.html  folding.html  font_size.html  general.html  generic.css  getting_started.html  large_documents.html  printing.html  processing.html  spelling.html  spelling_intro.html  syntax.html  tag_locking.html  templates.html  validation.html  word.html  word_integration.html  xml.html  xmlcopyeditor.html
src/po/: decodemsg.bat  encodemsg.bat  translate.txt
src/po/ca/: messages.mo  messages.po
src/po/de/: messages.mo  messages.po
src/po/en_us/: messages.mo  messages.po
src/po/es/: messages.mo  messages.po
src/po/fr/: messages.mo  messages.po
src/po/it/: messages.mo  messages.po
src/po/km/: messages.mo  messages.po
src/po/nl/: messages.mo  messages.po
src/po/ru/: messages.mo  messages.po
src/po/sk/: messages.mo  messages.po
src/po/sv/: messages.mo  messages.po
src/po/uk_UA/: messages.mo  messages.po
src/po/zh_CN/: messages.mo  messages.po
src/po/zh_TW/: messages.mo  messages.po
src/rng/: docbook.rnc  docbook.rng  docbookxi.rnc  docbookxi.rng  tei_all.rnc  tei_all.rng  tei_minimal.rnc  tei_minimal.rng  xhtml-strict.rng  xmlschema.rng
src/rulesets/: American.xml  Commonwealth.xml  Contractions.xml  Default_dictionary.xml  Default_dictionary_and_style.xml  Default_style.xml  Disability.xml  Diversity.xml  Ethnicity.xml  Gender.xml  Hyphenation.xml  Ise.xml  Ize.xml  Ize_and_yse.xml  Postcolonial.xml  Punctuation.xml  Query.xml  Religion.xml  Repetition.xml  White_space.xml  ruleset.css  ruleset.ctm  ruleset.rld  ruleset.xsd
src/templates/: Custom_rule_set.xml  DITA_Concept.xml  DITA_Map.xml  DITA_Task.xml  DITA_Topic.xml  DTD.dtd  DocBook_4.4_article.xml  DocBook_4.4_book.xml  DocBook_5.0_article.xml  DocBook_5.0_book.xml  Moodle_glossary.xml  Moodle_quiz.xml  NewsML_1.2.xml  OpenLaszlo.lzx  OpenLearn_document.xml  RELAX_NG_grammar.rng  RSS_2.0.rss  TEI_document.xml  WordprocessingML_document.xml  XHTML_1.0_Strict_document.html  XLIFF_document.xlf  XML_Schema.xsd  XML_Topic_Map_1.0.xtm  XML_Topic_Map_2.0.xtm  XSL_stylesheet.xsl
src/xpm/: appicon.xpm  stock_copy_16.xpm  stock_cut_16.xpm  stock_help_16.xpm  stock_hyperlink.xpm  stock_internet.xpm  stock_internet_16.xpm  stock_new.xpm  stock_new_16.xpm  stock_open.xpm  stock_open_16.xpm  stock_paste_16.xpm  stock_print-preview_16.xpm  stock_print.xpm  stock_print_16.xpm  stock_redo_16.xpm  stock_save.xpm  stock_save_16.xpm  stock_search_16.xpm  stock_spellcheck.xpm  stock_spellcheck_16.xpm  stock_undo_16.xpm
src/xsl/openlearn2daisyhtml/: heading.xsl  inline.xsl  item.xsl  lang.xsl  object.xsl  openlearn2daisyhtml.xsl  structure.xsl
